# chimera_mvp

./: .gitignore  LICENSE  README.md
inference/: .gitignore  Dockerfile  LICENSE  README.md  inference.py  requirements.txt
train/: .gitignore  README.md  client_app.py  config_experiment_runner.py  create_split.py  create_split_local_test_data.py  environment.yml  extract_features.py  federated_train.py  hyperparameters.py  main_clam.py  prepocessing.py  pyproject.toml  requirements.txt  server_app.py  simple_command_runner.py  train.py  visualize_data_splits.py
train/data/feature_extraction/: create_patches_fp.py  extract_features_fp.py
train/data/feature_extraction/dataset_modules/: dataset_h5.py
train/data/feature_extraction/models/: __init__.py
train/dataset/: dataset_iterator.py
train/dataset/clam_dataset/: dataset_generic.py  dataset_generic_new.py  dataset_generic_orig.py
train/experiments/: README.md  client_sweep.yaml  complex_sweep.yaml  epochs_sweet.yaml  hyperparameter_sweep.yaml  multi_seed.yaml  rounds_sweep.yaml  split_comparison.yaml
train/models/cd_models/: cd_nn.py
train/models/clam_models/: model_clam.py  model_multi_scale.py
train/models/mm_models/: multimodal_hierarchical.py  multimodal_simul.py
train/plot/: README_federated.md  del.json  old_vs_new.json  old_vs_new_old.json  plot_group_comparison.py  plot_run.py  plot_run_federated.py  plot_run_federated_old.py  plot_run_new.py  seeds_groups.json  short_phases.json  short_phases_phases.json  splits_groups.json
train/utils/: clam_utils.py  core_utils_simul.py  fl_utils.py
(+12 files in other folders)
